	* config/mips/iris6.h (TARGET_OS_CPP_BUILTINS): Define __c99 for 	ISO C99 and C++.

* fixinc/inclhack.def (irix___restrict): Don't change __restrict
	for C++ on IRIX 6.5.1[89].
	* fixinc/tests/base/internal/sgimacros.h: New file.

	* fixinc/inclhack.def (irix_wcsftime): Use XPG5 variant for C99.
	* fixinc/tests/base/internal/wchar_core.h: New file.

	* fixinc/inclhack.def (irix_socklen_t): Fix broken IRIX 6.5.1[78]
	socklen_t definition.
	* fixinc/fixincl.x: Regenerate.
	* fixinc/tests/base/sys/socket.h: New file.
	Fixes PR libgcj/9652.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63123 138bc75d-0d04-0410-961f-82ee72b054a4